fix: z-index

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
-/* * {
+* {
   outline: red 1px solid;
-} */
+}
 
 body {
   margin: 0;
@@ -24,7 +24,8 @@ body {
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
-  transition: all 1s;
+  transition: margin 1s;
+  margin: 0 auto auto 0;
 }
 
 .carousel__item {
@@ -76,10 +77,29 @@ body {
 }
 
 .angles {
-  display: flex;
-  justify-content: space-between;
   position: absolute;
-  width: 100vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  z-index: 10;
+  color: white;
+}
+
+.angles_left {
+  left: 0;
+}
+
+.angles_right {
+  right: 0;
+}
+
+.angles_up {
+  display: block;
+  align-items: top;
+}
+
+.angles_down {
+  display: block;
 }
 
 .angles_left-right {
@@ -88,10 +108,19 @@ body {
 }
 
 .angles_up-down {
-  flex-direction: column;
-  height: 100vh;
-  align-items: center;
   display: none;
+}
+
+.button {
+  background: none;
+  border: none;
+  outline: none;
+  cursor: pointer;
+}
+
+.button:hover {
+  opacity: .2;
+  transition: 350ms;
 }
 
 .fa {
@@ -106,12 +135,9 @@ body {
   opacity: 1;
 }
 
-.fa-angle-left {
-  margin-left: 1vw;
-}
-
-.fa-angle-right {
-  margin-right: 1vw;
+.fa:focus {
+  color: gold;
+  transition: color .5s;
 }
 
 .list {
@@ -124,13 +150,18 @@ body {
 @media (max-width: 500px) {
   .carousel__list {
     flex-direction: column;
-    margin-top: 0; 
+    transform: translateY(0%);
+    top: 0;
   }
   .angles_left-right {
     display: none;
   }
   .angles_up-down {
     display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    width: 100vw;
   }
 
 }
